# parinfer-rust

./: .gitignore  .npmignore  CHANGELOG.adoc  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.adoc  README.md  Web.toml  ^warning  build.rs  default.nix  derivation.nix  flake.nix  nixpkgs.nix  overlay.nix  package.json  parinfer.c  release.nix  shell.nix  tests.vim
.circleci/: config.yml
.github/workflows/: build.yaml  release.yaml
benches/: perf.rs
cparinfer/: Cargo.toml
cparinfer/benches/: perf.rs
cparinfer/src/: c_wrapper.rs  changes.rs  common_wrapper.rs  json.rs  lib.rs  parinfer.rs  wasm_wrapper.rs
cparinfer/static/: index.html
cparinfer/tests/: cases.rs
doc/: parinfer.txt
extra-docs/: MacOS-Code-Signing.adoc
parinfer/: Cargo.toml
parinfer/benches/: perf.rs
parinfer/src/: lib.rs
parinfer/tests/: cases.rs  perf.rs
parinfer/tests/cases/: indent-mode.json
plugin/: parinfer.vim
rc/: parinfer.kak
script/: release
src/: c_wrapper.rs  changes.rs  cli_options.rs  common_wrapper.rs  emacs_wrapper.rs  json.rs  kakoune.rs  lib.rs  main.rs  parinfer.rs  types.rs  wasm_wrapper.rs
static/: index.html
tests/: basic.clj  cases.rs  parinfer.md  run-all.sh  run-kakoune.sh  run.vim  runtests.vim  test_basic.vim  test_parinfer.vim  vimrc
tests/cases/: paren-mode.json  smart-mode.json
tests/kakoune/: run.sh
tests/kakoune/insert/: cmd  in  out
tests/kakoune/janet/: cmd  in  out
tests/kakoune/open-bracket/: cmd  in
tests/kakoune/picolisp/: cmd  in  out
tests/kakoune/select-word/: in  selections
tests/vim/: run.vim  tests-cases.md  vimrc
