[package]
name = "parinfer_rust"
version = "0.4.3"
authors = ["Jason Felice <jason.m.felice@gmail.com>"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "parinfer-rust"
path =  "src/main.rs"

[dependencies]
getopts = "0.2"
libc = "0.2.39"
serde = "1.0"
emacs = {version = "0.16.2", optional = true}
serde_json = "1.0"
serde_derive = "1.0"
unicode-segmentation = "1.1.0"
unicode-width = "0.1.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = ["libloaderapi"] }

