[package]
name = "cparinfer"
version = "0.1.0"
authors = ["Jason Felice <jason.m.felice@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.39"
parinfer = { path = "../parinfer" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.4"
